# xpkgindex

./: .gitignore  .xlings.json  README.md  data.json  pyproject.toml
src/: data_abstract_layer.py  xpkgindex.py
src/parsers/: xim_package_parser.py
templates/: footer.html  index.html  language.js  package.html  search.js  style.css  top-bar.html
xpkgindex/: __init__.py  cli.py  config.py  generator.py  lua_parser.py  models.py
xpkgindex/static/css/: style.css
xpkgindex/static/js/: clipboard.js  search.js  theme.js
xpkgindex/templates/: about.html  base.html  index.html  package.html
